Fix Apps menu positioning on narrow mobile

--- a/scss/modules/navbar.scss
+++ b/scss/modules/navbar.scss
@@ -145,6 +145,10 @@
 
 #app-menu-dropdown .dropdown-menu {
     width: max-content;
+
+    @media (max-width: #{$screen-xs-max}) {
+      left: -14rem;
+    }
 }
 
 .dropdown-header {
